US 2.4 Supprimer un compte
