# routes/api.php
@@ -72,6 +72,8 @@ Route::prefix('v1')->group(function () {
             ->name('comptes.show');
         Route::patch('/comptes/{numeroCompte}', [CompteController::class, 'update'])
             ->name('comptes.update');
+        Route::delete('/comptes/{compteId}', [CompteController::class, 'destroy'])
+            ->name('comptes.destroy');
     });
 
 });
